# Cross compilable mirrord workspace
# On Windows: You can build specific packages like cargo build -p mirrord -p mirrord-layer-win
# On Unix: Default cargo build will build the Unix-compatible crates
# All platforms: mirrord/* in members ensures all crates are available for explicit builds
# This will be resolved in the future, follow - https://github.com/rust-lang/rfcs/pull/3759
[workspace]

members = [
    "mirrord/*",
    "mirrord/agent/env",
    "mirrord/agent/iptables",
    "mirrord/layer-tests/tests/apps/fileops",
    "mirrord/layer-tests/tests/apps/outgoing",
    "mirrord/layer-tests/tests/apps/double_listen",
    "mirrord/layer-tests/tests/apps/listen_ports",
    "mirrord/layer-tests/tests/apps/dns_resolve",
    "mirrord/layer-tests/tests/apps/recv_from",
    "mirrord/layer-tests/tests/apps/issue1776",
    "mirrord/layer-tests/tests/apps/issue1776portnot53",
    "mirrord/layer-tests/tests/apps/issue1899",
    "mirrord/layer-tests/tests/apps/issue2001",
    "mirrord/layer-tests/tests/apps/issue2438",
    "mirrord/layer-tests/tests/apps/issue3248",
    "mirrord/layer-tests/tests/apps/rebind0",
    "mirrord/layer-tests/tests/apps/dup_listen",
    "sample/rust",
    "medschool",
    "tests",
    "test-utils",
    "tests/rust-e2e-fileops",
    "tests/rust-unix-socket-client",
    "tests/rust-bypassed-unix-socket",
    "tests/issue1317",
    "tests/rust-websockets",
    "tests/rust-sqs-printer",
    "xtask",
]
resolver = "2"

[workspace.metadata.cargo-shear]
ignored-paths = [
    "mirrord/layer-tests/tests/apps/issue1054/issue1054.rs",
    "mirrord/layer-tests/tests/apps/issue1123/issue1123.rs",
    "mirrord/layer-tests/tests/apps/issue1458/issue1458.rs",
    "mirrord/layer-tests/tests/apps/issue1458portnot53/issue1458portnot53.rs",
    "mirrord/layer-tests/tests/apps/issue2058/issue2058.rs",
    "mirrord/layer-tests/tests/apps/issue2204/issue2204.rs",
]

# latest commits on rustls suppress certificate verification
[workspace.package]
edition = "2024"
version = "3.203.1"
license = "MIT"
readme = "README.md"
repository = "https://github.com/metalbear/mirrord"
documentation = "https://metalbear.co/mirrord/docs"
authors = ["MetalBear <hi@metalbear.co>"]
description = "Run a local process in the context of a cloud environment"
homepage = "https://metalbear.co/mirrord"
publish = false
keywords = [
    "cli",
    "backend",
    "debug",
    "test",
    "kubernetes",
    "cloud",
    "native",
    "local",
    "ide",
    "devtool",
    "developer",
    "tool",
]
categories = ["development-tools", "backend", "devtool"]

[workspace.dependencies]
actix-codec = "0.5"
actix-web = "4"
anyhow = "1.0"
apple-codesign = { version = "0.29", default-features = false }
assert-json-diff = "2"
async-pidfd = "0.1.5"
async-stream = "0.3"
async-trait = "0.1"
aws-config = { version = "1.5", default-features = false }
aws-sdk-sqs = { version = "1.39", default-features = false }
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
base64 = "0.22"
bcder = "0.7"
bimap = "0.6"
bincode = { version = "2", features = ["serde"] }
bitflags = "2"
bollard = "0.18"
bytes = "1"
caps = "0.5"
chrono = "0.4"
ci_info = "0.14"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4.4.1"
const-random = "0.1.15"
containerd-client = "0.6"
ctor = "0.2"
derive_more = "2.0.1"
dll-syringe = "0.16.0"
dns-lookup = "3"
dotenvy = "0.15"
drain = "0.1"
enum_dispatch = "0.3"
env_logger = "0.11"
errno = "0.3"
eventsource-stream = "0.2"
exec = "0.3"
faccess = "0.2"
fancy-regex = { version = "0.14" }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
frida-gum = { version = "0.17", features = ["auto-download", "std"] }
fs4 = { version = "0.13", features = ["tokio", "sync"], default-features = false }
futures = "0.3"
futures-util = "0.3"
glob = "0.3"
hex = "0.4"
hickory-resolver = { version = "0.24.3", features = ["serde", "tokio-runtime"] }
home = "0.5"
http = { version = "1" }
http-body = "1"
http-body-util = "0.1"
http-serde = "2"
httparse = "1"
humantime = "2"
# If you update `hyper`, check that `h2` version is compatible in `intproxy/Cargo.toml`.
# There is a test for this: `cargo test -p mirrord-intproxy hyper_and_h2_versions_in_sync`
hyper = { version = "1.7", features = ["full"] }
hyper-util = { version = "0.1" }
indicatif = "0.18"
ipnet = "2.8"
iptables = { git = "https://github.com/metalbear-co/rust-iptables.git", rev = "e66c7332e361df3c61a194f08eefe3f40763d624" }
itertools = "0.14.0"
jaq-core = "2.2.1"
jaq-json = "1.1.3"
jaq-std = "2.1.2"
k8s-cri = "0.9"
k8s-openapi = { version = "0.27", features = ["v1_31"] }
kube = { version = "3.1", default-features = false, features = [
    "runtime",
    "derive",
    "client",
    "ws",
    "rustls-tls",
    "aws-lc-rs",
    "oidc",
    "socks5",
    "http-proxy",
] }
libc = "0.2"
local-ip-address = "0.6"
log = { version = "0.4", features = ["std"] }
mid = "3.0.0"
miette = "7"
mime_guess = "2"
minhook-detours-rs = { git = "https://github.com/metalbear-co/minhook-detours-rs.git", rev = "4bfbf5717c6829f91b527180a038ec591b8265ca" }
mirrord-session-monitor-client = { path = "mirrord/session-monitor-client" }
mirrord-session-monitor-protocol = { path = "mirrord/session-monitor-protocol" }
mirrord-test-macros = { path = "mirrord/test-macros" }
mockall = "0.13"
nix = { version = "0.29", features = ["net"] }
nom = "7.1"
notify = { version = "8", features = ["macos_fsevent"] }
null-terminated = { git = "https://github.com/metalbear-co/null-terminated.rs", default-features = false }
num-traits = "0.2"
objc2-core-foundation = "0.3"
object = "0.36"
oci-spec = "0.7.0"
once_cell = "1"
opener = "0.8.3"
pem = "3"
phnt = "0.1.2"
pnet_packet = "0.35"
prettytable-rs = "0.10"
proc-macro2 = "1"
proc-macro2-diagnostics = "0.10"
procfs = "0.17.0"
prometheus = { version = "0.14", features = ["process"] }
quote = "1"
rand = "0.9"
rcgen = "0.13"
regex = { version = "1", features = ["unicode-case"] }
reqwest = { version = "0.13", default-features = false, features = [
    "blocking",
    "rustls",
    "json",
    "socks",
    "http2",
] }
resolv-conf = "0.7"
rstest = "0.23"
rust-embed = "8"
rustls = "0.23"
rustls-pemfile = "2"
schemars = { version = "1.0" }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_json_path = "0.7.2"
serde_json_path_macros = "0.1.6"
serde_urlencoded = "0.7"
serde_yaml = "0.9"
sha2 = "0.10"
shellexpand = "3"
socket2 = { version = "0.5", features = ["all"] }
streammap-ext = "0.1"
strum = "0.27.1"
strum_macros = "0.27.1"
syn = { version = "2", features = ["full", "extra-traits"] }
syscalls = { version = "0.6", features = ["full"] }
tar = "0.4"
tempfile = "3"
tera = "1"
test-cdylib = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "net", "io-util"] }
tokio-retry = "0.3"
tokio-rustls = "0.26"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = { version = "0.24" }
tokio-util = { version = "0.7", features = ["net", "codec"] }
toml = "0.8"
tonic = "0.12"
tower = "0.5"
tower-http = { version = "0.6.6", features = ["fs", "set-header"] }
tower-test = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tun2 = { version = "4", features = ["async"] }
url = "2.5.8"
uuid = { version = "1.18", features = ["v4", "serde"] }
which = "7"
whoami = "1"
wildmatch = "2"
windows-strings = "0.4"
winapi = { version = "0.3.9", features = [
    "winbase",
    "minwindef",
    "winnt",
    "consoleapi",
    "libloaderapi",
    "fileapi",
    "winsock2",
    "mswsock",
    "ws2tcpip",
    "ws2def",
    "ws2ipdef",
    "debugapi",
    "processthreadsapi",
    "errhandlingapi",
    "sysinfoapi",
    "synchapi",
    "handleapi",
    "processenv",
    "winioctl",
    "memoryapi",
    "timezoneapi",
    "securitybaseapi",
    "namedpipeapi",
    "impl-default",
] }
x509-certificate = "0.24"
x509-parser = "0.17"
xmas-elf = "0.10"
yamlpatch = "0.9.0"
yamlpath = "0.32.0"

[workspace.lints.rustdoc]
private_intra_doc_links = "allow"

[profile.release]
strip = "debuginfo"
# Enabling LTO causes this issue https://github.com/metalbear-co/mirrord/issues/906
lto = false

[patch.crates-io]
tree-sitter = { git = "https://github.com/metalbear-co/tree-sitter.git", tag = "hotfix" }
tree-sitter-language = { git = "https://github.com/metalbear-co/tree-sitter.git", tag = "hotfix" }
