[package]
name = "e2e"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k8s-openapi = { version = "0.14.0", features = ["v1_22"] }
kube = { version = "0.71.0", default-features = false, features = ["runtime", "derive", "client", "ws", "rustls-tls"] }
reqwest = "0.11.10"
tokio = { version = "1", features = ["macros"] }
serde_json = "1.0.79"
mirrord = { artifact = "bin", bin = true, path = "../mirrord-cli" }