[package]
name = "mirrord-agent"
version = "2.0.0-alpha-4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
containerd-client = {git = "https://github.com/containerd/rust-extensions", rev="6bc49c007cf93869e7d83fca4818b6aae1145b45"}
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pcap = { git = "https://github.com/aviramha/pcap.git", branch="make_codec_public", features =["capture-stream"] }
pnet = "0.29.0"
nix = "0.23.1"
anyhow = "1"
clap = { version = "3.1.2", features = ["derive"] }
mirrord-protocol = { path = "../mirrord-protocol", version = "*"}
env_logger = "0.9"
actix-codec = "0.5"
futures = "0.3.21"
tracing = "0.1.32"
tokio-stream = "0.1.8"
num-traits = "0.2.14"

[dev-dependencies]
test_bin = "0.4.0"