[package]
name = "mirrord-agent"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
edition.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
containerd-client = {git = "https://github.com/containerd/rust-extensions", rev="6bc49c007cf93869e7d83fca4818b6aae1145b45"}
tokio.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
pnet = "0.31"
nix.workspace = true
clap.workspace = true
mirrord-protocol = { path = "../mirrord-protocol"}
actix-codec.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-stream.workspace = true
thiserror.workspace = true
trust-dns-resolver.workspace = true
num-traits = "0.2"
bollard = "0.13"
tokio-util.workspace = true
rand.workspace = true
streammap-ext.workspace = true
iptables = "0.5"
libc = "0.2"
faccess = "0.2"
bytes = "1.2"
regex = "1"
socket2 = "0.4"
rawsocket = {git = "https://github.com/metalbear-co/rawsocket.git"}
wildmatch = "2"

[dev-dependencies]
mockall = "0.11"
test_bin = "0.4"