cargo-features = ["workspace-inheritance"]

[package]
name = "mirrord"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
exec = "0.3"
anyhow.workspace = true
reqwest = "0.11.10"
semver = "1.0.9"

[build-dependencies]
mirrord-layer = { artifact = "cdylib", path="../mirrord-layer" }

[target.aarch64-apple-darwin.dependencies]
mach_object = "0.1"
search_path = "0.1.3"