[package]
name = "mirrord"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mirrord-auth = { path="../mirrord-auth", features = ["webbrowser"] }
mirrord-common = { version = "0.1.0", path = "../mirrord-common" }

clap.workspace = true
tracing.workspace = true
rand.workspace = true
tracing-subscriber.workspace = true
exec = "0.3"
anyhow.workspace = true
reqwest.workspace = true
semver = "1"


[build-dependencies]
mirrord-layer = { artifact = "cdylib", path="../mirrord-layer" }
