[package]
name = "mirrord-common"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
colored = "2.0.0"
spinoff = "0.5.4"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "registry"] }
