[package]
name = "mirrord-config"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
mirrord-macro = { path = "../mirrord-macro"}
mirrord-config-derive = { path = "./derive"}

anyhow.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
serde_yaml = "0.9"
toml = "0.5"

[dev-dependencies]
rstest = "*"
