cargo-features = ["workspace-inheritance"]

[package]
name = "mirrord-layer"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
edition.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctor = "0.1"
libc = "0.2"
nix.workspace = true
os_socketaddr = "0.2"
tracing.workspace = true
tracing-subscriber.workspace = true
frida-gum = {version = "0.6", features = ["auto-download"]}
futures.workspace = true
clap.workspace = true
k8s-openapi.workspace = true
kube.workspace = true

tokio.workspace = true
serde_json.workspace = true

nanoid = "0.4"
mirrord-protocol = { path = "../mirrord-protocol"}
actix-codec.workspace = true
bytes.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
thiserror.workspace = true
dns-lookup.workspace = true
queues = "1"
rand.workspace = true
multi-map = "1"
envconfig = "0.10"
regex = "1"
errno = "0.2"
async-trait = "0.1"
socket2 = "0.4"
anyhow.workspace = true
streammap-ext = "0.1"

[lib]
crate_type = ["cdylib"]

