[package]
name = "mirrord-layer"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
edition.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mirrord-config = { path = "../mirrord-config"}
mirrord-protocol = { path = "../mirrord-protocol"}
mirrord-macro = { path = "../mirrord-macro"}
mirrord-progress = { path = "../mirrord-progress" }

ctor = "0.1"
libc = "0.2"
nix.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
frida-gum = { version = "0.8", features = ["auto-download"] }
futures.workspace = true
k8s-openapi.workspace = true
kube.workspace = true

tokio.workspace = true
serde_json.workspace = true

actix-codec.workspace = true
bytes.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
thiserror.workspace = true
trust-dns-resolver.workspace = true
rand = "0.8"
fancy-regex = { version = "0.10" }
errno = "0.2"
async-trait = "0.1"
socket2 = "0.4"
anyhow.workspace = true
streammap-ext.workspace = true
stacker = "0.1"


[dev-dependencies]
rstest = "*"
test-cdylib = "*"

[lib]
crate_type = ["cdylib"]

