cargo-features = ["workspace-inheritance"]

[package]
name = "mirrord-protocol"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
actix-codec.workspace = true
bytes.workspace = true
bincode = "2.0.0-rc.1"
